<resources>
    <string name="app_name">UcokDurian Inventory</string>
    <string name="app_website">www.ucokdurian.id</string>

    <string name="greeting">Welcome To UcokDurian Inventory</string>

    <string name="login_welcome">Masukkan Detail Login Anda</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_btn_enter">Login</string>
    <string name="login_btn_register">Mendaftar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="left_menu_home">Home</string>
    <string name="left_menu_stok_in">Stok Masuk</string>
    <string name="left_menu_stok_receipt">Terima Barang</string>
    <string name="left_menu_stok_out">Stok Keluar</string>
    <string name="left_menu_transfer_out">Transfer Antar Warehouse</string>
    <string name="left_menu_inventory_out">Trans. Non Penjualan</string>
    <string name="left_menu_profile">Profil</string>
    <string name="left_menu_change_profile">Ubah Profil</string>
    <string name="left_menu_logout">Logout</string>
    <string name="left_menu_master">Master Data</string>
    <string name="left_menu_manage_master_data">Kelola Master Data</string>
    <string name="left_menu_inventory_request">Pengadaan Barang</string>
    <string name="left_menu_purchase_order">Purchase Order</string>
    <string name="left_menu_delivery">Pengiriman Barang</string>
    <string name="left_menu_delivery_order">Delivery Order</string>
    <string name="left_menu_good_in_transit">Good In Transit</string>

    <string name="home_menu_receipt">Receipt</string>
    <string name="home_menu_receipt_desc">Penerimaan Barang</string>
    <string name="home_menu_transfer_issue">Transfer Issue</string>
    <string name="home_menu_transfer_issue_desc">Move Antar Warehouse</string>
    <string name="home_menu_inventory_issue">Inventory Issue</string>
    <string name="home_menu_inventory_issue_desc">Trans. Non Penjualan</string>
    <string name="home_menu_notification">Pemberitahuan</string>
    <string name="home_menu_notification_desc">Notifikasi Untuk Anda</string>
    <string name="home_menu_purchase_order">Purchase Order</string>
    <string name="home_menu_purchase_order_desc">Pengadaan Barang</string>
    <string name="home_menu_delivery_order">Delivery Order</string>
    <string name="home_menu_delivery_order_desc">Pengiriman Barang</string>
    <string name="home_menu_stock_report">Laporan Stock</string>
    <string name="home_menu_stock_report_desc">Persedian di Warehouse</string>
    <string name="home_menu_git">Good In Transit</string>
    <string name="home_menu_git_desc">Gudang Berjalan</string>

    <string name="action_settings">Settings</string>
    <string name="action_addition">Tambah</string>
    <string name="txt_purchase_order">Pengadaan Barang</string>
    <string name="txt_receipt">Penerimaan Barang</string>
    <string name="txt_notification">Pemberitahuan</string>
    <string name="txt_transfer_issue">Transfer Antar Warehouse</string>
    <string name="txt_delivery">Pengiriman Barang</string>
    <string name="txt_notice_title">Info Baru di Ucok Durian</string>
    <string name="txt_purchase_report">Rincian Pengadaan</string>
    <string name="txt_stock">Laporan Stok</string>
    <string name="txt_transfer_report">Laporan Transfer Stok</string>
    <string name="txt_inventory">Transaksi Non Penjualan</string>
    <string name="txt_no">No</string>
    <string name="txt_product_name">Nama Produk</string>
    <string name="txt_product_quantity">Jumlah Barang</string>
    <string name="txt_origin">Origin</string>
    <string name="txt_date">Tanggal</string>
    <string name="txt_notes">Catatan</string>
    <string name="txt_items">Barang</string>
    <string name="txt_reason">Alasan dan tujuan</string>
    <string name="txt_profile">Profil</string>
    <string name="txt_master_data">Master Data</string>
    <string name="txt_git_data">Good In Transit</string>
    <string name="txt_profile_setup">Ubah Data Profil</string>
    <string name="txt_form_requirement">Silakan lengkapi beberapa isian berikut :</string>
    <string name="txt_header_list_product">Daftar Produk :</string>
    <string name="txt_header_list_supplier">Daftar Suplier :</string>
    <string name="txt_header_list_shipment">Daftar Metode Pengiriman :</string>
    <string name="txt_header_list_warehouse">Daftar Warehouse :</string>

    <string name="po_number">Nomor PO</string>
    <string name="supplier_name">Nama Suplier</string>
    <string name="destination">Tujuan</string>
    <string name="shipment_method">Cara Pengiriman</string>
    <string name="shipment_date">Tanggal Pengiriman</string>
    <string name="list_po_items">Daftar Barang</string>

    <string name="btn_tambahkan">Tambahkan</string>
    <string name="btn_cancel">Batal</string>
    <string name="btn_remove">Hapus</string>
    <string name="btn_update">Ubah</string>
    <string name="btn_add">Tambahkan</string>
    <string name="btn_back_to_list">Kembali Ke Daftar</string>
    <string name="btn_save">Simpan</string>
    <string name="btn_submit">Kirim</string>
    <string name="btn_add_item">Tambah Barang</string>
    <string name="btn_copy_message">Salin Pesan</string>
    <string name="btn_add_product">Tambah Produk</string>
    <string name="btn_add_supplier">Tambah Suplier</string>
    <string name="btn_add_shipment">Tambah Pengiriman</string>
    <string name="btn_add_warehouse">Tambah Warehouse</string>
    <string name="btn_add_product_item">Tambah Item Barang</string>

    <string name="tab_archive">Arsip</string>
    <string name="tab_list_issue">Barang Masuk</string>
    <string name="tab_delivery_order">Pengiriman</string>
    <string name="tab_po_detail">Rincian PO</string>
    <string name="tab_po_history">Riwayat</string>
    <string name="tab_po_update">Ubah PO</string>
    <string name="tab_po_create">PO Baru</string>
    <string name="tab_po_archive">Arsip</string>
    <string name="tab_po_pending">Pending</string>
    <string name="tab_po_onprocess">Diproses</string>
    <string name="tab_profile_detail">Ubah Profil</string>
    <string name="tab_change_password">Ubah Password</string>
    <string name="tab_product">Produk</string>
    <string name="tab_shipment">Pengiriman</string>
    <string name="tab_supplier">Suplier</string>
    <string name="tab_warehouse">Warehouse</string>
    <string name="tab_git_summary">Ringkasan</string>
    <string name="tab_git_history">History</string>
    <string name="tab_git_stock">Stok Terkini</string>
    <string name="tab_git_incoming_good">Barang Datang</string>
    <string name="tab_git_outgoing_good">Barang Keluar</string>
    <string name="tab_delivery_order_list">Daftar Order</string>
    <string name="tab_delivery_status_list">Status Pengiriman</string>

    <string name="input_find_product">Cari Produk</string>

    <string name="dialog_remove_po">Anda yakin ingin MENGHAPUS PO ini?</string>
    <string name="dialog_add_item_po">Jumlah Pengadaan Barang</string>
    <string name="dialog_update_item_po">Ubah Item PO</string>
    <string name="dialog_add_product">Form Tambah Produk</string>
    <string name="dialog_update_product">Form Ubah Produk</string>
    <string name="dialog_add_supplier">Form Tambah Suplier</string>
    <string name="dialog_update_supplier">Form Ubah Suplier</string>
    <string name="dialog_add_shipment">Tambah Cara Pengiriman</string>
    <string name="dialog_update_shipment">Ubah Cara Pengiriman</string>
    <string name="dialog_remove_confirm">Anda yakin ingin menghapus item ini?</string>
    <string name="dialog_add_warehouse">Tambah Warehouse</string>
    <string name="dialog_update_warehouse">Ubah Data Warehouse</string>
    <string name="dialog_confirm_title">Konfirmasi Penerimaan</string>
    <string name="dialog_transfer_title">Jumlah Pengeluaran Barang</string>

    <string name="label_product_name">Nama Barang :</string>
    <string name="label_item_quantity">Jumlah Barang :</string>
    <string name="label_purchase_price">Harga Pembelian :</string>
    <string name="label_profile_name">Nama Lengkap :</string>
    <string name="label_profile_email">Alamat Email :</string>
    <string name="label_profile_username">Username :</string>
    <string name="label_profile_phone">Telepon/WA :</string>
    <string name="label_old_password">Password Lama :</string>
    <string name="label_new_password">Password Baru :</string>
    <string name="label_new_password_confirm">Password Baru (diulang) :</string>
    <string name="label_product_title">Nama Produk :</string>
    <string name="label_product_code">Kode Produk :</string>
    <string name="label_product_unit">Unit Produk :</string>
    <string name="label_description">Deskripsi :</string>
    <string name="label_supplier_name">Nama Suplier :</string>
    <string name="label_supplier_address">Alamat :</string>
    <string name="label_supplier_phone">No Telpon :</string>
    <string name="label_notes">Catatan :</string>
    <string name="label_shipment_title">Nama Pengiriman :</string>
    <string name="label_shipment_description">Deskripsi :</string>
    <string name="label_warehouse_title">Nama :</string>
    <string name="label_warehouse_address">Alamat :</string>
    <string name="label_warehouse_phone">Telepon :</string>
    <string name="label_warehouse_notes">Catatan :</string>
    <string name="label_warehouse_group">Group :</string>
    <string name="label_transfer_destination">Tujuan Pengiriman :</string>
    <string name="label_transfer_date">Tanggal Pengeluaran :</string>
    <string name="label_choose_item">Pilih Item Produk :</string>
    <string name="label_number_of_transfer">Jumlah Pengeluaran :</string>

    <string name="msg_unable_remove_po">Hanya PO yang masih berstatus PENDING yang dapat dihapus.</string>
    <string name="msg_password_different">Ulangi password baru dengan benar.</string>
    <string name="msg_password_empty_field">Nama, email, username tidak boleh dikosongi.</string>
    <string name="msg_require_all_field">Semua kolom wajib diisi.</string>
    <string name="msg_product_empty_field">Nama, kode, dan unit produk tidak boleh dikosongi.</string>
    <string name="msg_supplier_empty_field">Nama, alamat, dan telepon tidak boleh dikosongi.</string>
    <string name="msg_shipment_empty_field">Nama cara pengiriman tidak boleh dikosongi.</string>
    <string name="msg_warehouse_empty_field">Nama, alamat, dan telepon tidak boleh dikosongi.</string>
    <string name="msg_no_item_found">Item tidak ditemukan.</string>
    <string name="msg_loading">Sedang memuat..</string>

    <string name="hint_insert_item_price">Masukkan harga per item</string>
    <string name="hint_insert_item_quantity">Masukkan jumlah barang</string>
</resources>
