<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/left_menu_home" />
    </group>

    <item android:title="@string/left_menu_stok_in" android:id="@+id/nav_stock_in_container">
        <menu>
            <item
                android:id="@+id/nav_stock_in"
                android:icon="@drawable/ic_menu_move_in"
                android:title="@string/left_menu_stok_receipt" />
        </menu>
    </item>

    <item android:title="@string/left_menu_stok_out">
        <menu>
            <item
                android:id="@+id/nav_transfer_out"
                android:icon="@drawable/ic_menu_move_warehouse"
                android:title="@string/left_menu_transfer_out" />
            <item
                android:id="@+id/nav_inventory_out"
                android:icon="@drawable/ic_menu_move_out"
                android:title="@string/left_menu_inventory_out" />
        </menu>
    </item>

    <item android:title="@string/left_menu_profile">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_menu_profile"
                android:title="@string/left_menu_change_profile" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/left_menu_logout" />
        </menu>
    </item>

</menu>
