<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"
        android:visible="false"/>
    <item
        android:id="@+id/action_add_master_data"
        android:icon="@drawable/ic_btn_add"
        android:title="@string/action_addition"
        app:showAsAction="ifRoom"
        android:visible="false"
        >
        <menu>
            <item
                android:id="@+id/nav_add_product"
                android:title="@string/btn_add_product" />
            <item
                android:id="@+id/nav_add_supplier"
                android:title="@string/btn_add_supplier" />
            <item
                android:id="@+id/nav_add_shipment"
                android:title="@string/btn_add_shipment" />
            <item
                android:id="@+id/nav_add_warehouse"
                android:title="@string/btn_add_warehouse" />
        </menu>

    </item>

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/left_menu_logout"
        app:showAsAction="never" />
</menu>
