<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:useDefaultMargins="true"
        android:alignmentMode="alignBounds"
        android:columnOrderPreserved="false"
        android:columnCount="4" >

        <TextView
            android:text="@string/txt_form_requirement"
            android:textSize="16dip"
            android:layout_columnSpan="4"
            android:layout_gravity="left"
            android:textStyle="bold"
            />

        <TextView
            android:text="@string/label_old_password"
            android:layout_gravity="right"
            />

        <EditText
            android:ems="10"
            android:id="@+id/input_old_password"
            android:inputType="textPassword"
            android:singleLine="true"
            />

        <TextView
            android:text="@string/label_new_password"
            android:layout_column="0"
            android:layout_gravity="right"
            />

        <EditText
            android:ems="10"
            android:id="@+id/input_new_password"
            android:inputType="textPassword"
            android:singleLine="true"
            />

        <TextView
            android:text="@string/label_new_password_confirm"
            android:layout_column="0"
            android:layout_gravity="right"
            />

        <EditText
            android:ems="10"
            android:id="@+id/input_new_password_confirm"
            android:inputType="textPassword"
            android:singleLine="true"
            />

        <Space
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_gravity="fill"
            />

        <Button
            android:drawableTop="@drawable/ic_btn_save"
            android:text="@string/btn_save"
            android:layout_row="5"
            android:layout_column="3"
            android:background="@android:color/transparent"
            android:onClick="updatePassword"
            android:clickable="true"
            />
    </GridLayout>

</ScrollView>