<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_update_item_po"
        android:paddingLeft="0dp"
        android:textSize="16dip"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/textlines"
        />

    <TextView
        android:id="@+id/txt_label_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="16dip"
        android:text="@string/label_product_name"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/txt_product_name"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginTop="5dp"
        >
    </TextView>

    <TextView
        android:id="@+id/txt_label_qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="16dip"
        android:text="@string/label_item_quantity"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/txt_qty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="0dp"
        android:hint="Masukkan jumlah barang"
        android:text=""
        android:inputType="number"/>

    <TextView
        android:id="@+id/txt_label_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="16dip"
        android:text="@string/label_purchase_price"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/txt_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="0dp"
        android:hint="Masukkan harga per item"
        android:text=""
        android:inputType="number" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/btn_dialog_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/btn_save"
            android:background="@color/green"
            android:textColor="#fff"
            android:layout_gravity="left"
            android:visibility="visible"/>

        <Button
            android:id="@+id/btn_dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/btn_cancel"
            android:background="@color/yellow"
            android:textColor="#fff"
            android:layout_gravity="left"
            android:layout_marginLeft="100dp"
            android:visibility="visible"/>

        <Button
            android:id="@+id/btn_dialog_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/btn_remove"
            android:background="@color/colorAccent"
            android:textColor="#fff"
            android:layout_gravity="left"
            android:layout_marginLeft="100dp"
            android:visibility="gone"/>
    </FrameLayout>

    <TextView
        android:id="@+id/stack_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:visibility="gone"
        />

</LinearLayout>